--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,8 @@ rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.0
+  - jruby-19mode
+matrix:
+  include:
+   - rvm: jruby-19mode
+     env: JRUBY_OPTS="$JRUBY_OPTS --debug"
