--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: ruby
 env:
   matrix:
-    - RAILS_VERSION="~> 3.2.0"
-    - RAILS_VERSION="~> 4.0.0"
+    - RAILS_VERSION="~> 3.2.0" JRUBY_OPTS="$JRUBY_OPTS --debug"
+    - RAILS_VERSION="~> 4.0.0" JRUBY_OPTS="$JRUBY_OPTS --debug"
 rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.0
   - jruby-19mode
-matrix:
-  include:
-   - rvm: jruby-19mode
-     env: JRUBY_OPTS="$JRUBY_OPTS --debug"
