Travis yml work around for ruby 1.9.3 http://stackoverflow.com/questions/36979283/how-to-fix-travis-error-nomethoderror-undefined-method-spec-for-nilnilclass

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,5 @@ matrix:
     # See https://github.com/rails/rails/pull/18306
     - rvm: 2.2.0
       env: RAILS_VERSION="~> 3.2.21" JRUBY_OPTS="$JRUBY_OPTS --debug"
+before_install:
+  - gem install bundler
