--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
     - RAILS_VERSION="~> 4.1.16"
     - RAILS_VERSION="~> 4.2.9"
     - RAILS_VERSION="~> 5.0.6"
+    - RAILS_VERSION="~> 5.1.3"
 rvm:
   - 2.1.10
   - 2.2.8
@@ -27,3 +28,7 @@ matrix:
       env: RAILS_VERSION="~> 4.1.16"
     - rvm: jruby-9.1.13.0
       env: RAILS_VERSION="~> 5.0.6"
+    - rvm: 2.1.10
+      env: RAILS_VERSION="~> 5.1.3"
+    - rvm: jruby-9.1.13.0
+      env: RAILS_VERSION="~> 5.1.3"
