--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,11 @@
 language: ruby
 sudo: false
-env:
-  global:
-    - JRUBY_OPTS="$JRUBY_OPTS --debug"
-  matrix:
-    - RAILS_VERSION="~> 3.2.22.5"
-    - RAILS_VERSION="~> 4.0.13"
-    - RAILS_VERSION="~> 4.1.16"
-    - RAILS_VERSION="~> 4.2.9"
-    - RAILS_VERSION="~> 5.0.6"
-    - RAILS_VERSION="~> 5.1.3"
+gemfile:
+- gemfiles/rails_4.2.gemfile
+- gemfiles/rails_5.0.gemfile
+- gemfiles/rails_5.1.gemfile
+- gemfiles/rails_5.2.gemfile
 rvm:
-  - 2.1.10
-  - 2.2.8
-  - 2.3.5
-  - 2.4.2
-  - jruby-9.1.13.0
-matrix:
-  exclude:
-    - rvm: 2.1.10
-      env: RAILS_VERSION="~> 5.0.6"
-    - rvm: 2.4.2
-      env: RAILS_VERSION="~> 3.2.22.5"
-    - rvm: 2.4.2
-      env: RAILS_VERSION="~> 4.0.13"
-    - rvm: 2.4.2
-      env: RAILS_VERSION="~> 4.1.16"
-    - rvm: jruby-9.1.13.0
-      env: RAILS_VERSION="~> 5.0.6"
-    - rvm: 2.1.10
-      env: RAILS_VERSION="~> 5.1.3"
-    - rvm: jruby-9.1.13.0
-      env: RAILS_VERSION="~> 5.1.3"
+- 2.3.8
+- 2.4.5
+- 2.5.3
