--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: ruby
 sudo: false
 gemfile:
-- gemfiles/rails_4.2.gemfile
-- gemfiles/rails_5.0.gemfile
-- gemfiles/rails_5.1.gemfile
-- gemfiles/rails_5.2.gemfile
+  - gemfiles/rails_4.2.gemfile
+  - gemfiles/rails_5.0.gemfile
+  - gemfiles/rails_5.1.gemfile
+  - gemfiles/rails_5.2.gemfile
 rvm:
-- 2.3.8
-- 2.4.5
-- 2.5.3
+  - 2.3.8
+  - 2.4.5
+  - 2.5.3
+script:
+  - bundle exec rspec
+  - bundle exec rubocop
