--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,9 @@ rvm:
 script:
   - bundle exec rspec
   - bundle exec rubocop
+matrix:
+  exclude:
+  - rvm: 2.3.8
+    gemfile: gemfiles/rails_6.0.gemfile
+  - rvm: 2.4.5
+    gemfile: gemfiles/rails_6.0.gemfile
