--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ inherit_gem:
 
 AllCops:
   TargetRubyVersion: 2.5
+  Exclude:
+    - 'vendor/**/*'
+    - 'gemfiles/vendor/**/*'
 
 Style/FrozenStringLiteralComment:
   Enabled: true
