--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,14 @@
+aws-auth: &aws-auth
+  aws_auth:
+    aws_access_key_id: $ECR_AWS_ACCESS_KEY_ID
+    aws_secret_access_key: $ECR_AWS_SECRET_ACCESS_KEY
+
 version: 2.1
 jobs:
   lint:
     docker:
-      - image: salsify/ruby_ci:2.7.7
+      - image: $SALSIFY_ECR_REPO/ruby_ci:2.7.7
+        <<: *aws-auth
     working_directory: ~/delayed_job_groups
     steps:
       - checkout
@@ -32,7 +38,8 @@ jobs:
       ruby_version:
         type: string
     docker:
-      - image: salsify/ruby_ci:<< parameters.ruby_version >>
+      - image: $SALSIFY_ECR_REPO/ruby_ci:<< parameters.ruby_version >>
+        <<: *aws-auth
     environment:
       CIRCLE_TEST_REPORTS: "test-results"
       BUNDLE_GEMFILE: << parameters.gemfile >>
@@ -64,8 +71,10 @@ jobs:
 workflows:
   build:
     jobs:
-      - lint
+      - lint:
+          context: Salsify
       - test:
+          context: Salsify
           matrix:
             parameters:
               gemfile:
