--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,7 @@ workflows:
               gemfile:
                 - "gemfiles/rails_6.1.gemfile"
                 - "gemfiles/rails_7.0.gemfile"
+                - "gemfiles/rails_7.1.gemfile"
               ruby_version:
                 - "3.0.6"
                 - "3.1.4"
