--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,16 @@ version: 2.1
 jobs:
   lint:
     docker:
-      - image: cimg/ruby:3.0.6
+      - image: cimg/ruby:3.0.7
+    environment:
+      BUNDLE_GEMFILE: gemfiles/rails_6.1.gemfile
     working_directory: ~/delayed_job_groups
     steps:
       - checkout
       - restore_cache:
           keys:
-            - v1-gems-ruby-3.0.6-{{ checksum "delayed_job_groups.gemspec" }}-{{ checksum "Gemfile" }}
-            - v1-gems-ruby-3.0.6-
+            - v1-gems-ruby-3.0.7-{{ checksum "delayed_job_groups.gemspec" }}-{{ checksum "gemfiles/rails_6.1.gemfile" }}
+            - v1-gems-ruby-3.0.7-
       - run:
           name: Install Gems
           command: |
@@ -18,7 +20,7 @@ jobs:
               bundle clean
             fi
       - save_cache:
-          key: v1-gems-ruby-3.0.6-{{ checksum "delayed_job_groups.gemspec" }}-{{ checksum "Gemfile" }}
+          key: v1-gems-ruby-3.0.7-{{ checksum "delayed_job_groups.gemspec" }}-{{ checksum "gemfiles/rails_6.1.gemfile" }}
           paths:
             - "vendor/bundle"
             - "gemfiles/vendor/bundle"
@@ -72,8 +74,12 @@ workflows:
                 - gemfiles/rails_6.1.gemfile
                 - gemfiles/rails_7.0.gemfile
                 - gemfiles/rails_7.1.gemfile
+                - gemfiles/rails_7.2.gemfile
               ruby_version:
-                - 3.0.6
-                - 3.1.4
-                - 3.2.2
-                - 3.3.0
+                - 3.0.7
+                - 3.1.6
+                - 3.2.5
+                - 3.3.4
+            exclude:
+              - gemfile: gemfiles/rails_7.2.gemfile
+                ruby_version: 3.0.7
